EstiÃlo al contenido de Html en Sass

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <header class="header">
+        <div class="header__conte">
+            <h1 class="header__conte__title">El Periódico</h1>
+        </div>
         <section class="header__inicio">
-            <div class="header__inicio__div">
-                <h1 class="header__inicio__div__title">EL PERIODICO</h1>
-            </div>
+            
           <p class="header__inicio__content">   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Martes 08 de noviembre de 2022</p>
 
         </section>
@@ -20,28 +21,27 @@
     </header>
      <main class="menu">
         <section class="menu__contenido">
-            <img class="menu__contenido__img" src="" alt="">
           <h1 class ="menu__contenido__titulo">Lorem,ipsum dolor sit amet consectetur adipisicing elit.</h1>
         </section>   
         <section class="menu__cajas">
             <div class="menu__cajas__caja">
                 <h1 class="menu__cajas__caja__t">TITULO 1</h1>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <p class="menu__cajas__caja__parra">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,standard dummy text ever since the 1500s</p>
                 <span class="menu__cajas__caja__numero">22</span>
             </div>
             <div class="menu__cajas__caja">
                 <h1 class="menu__cajas__caja__t">TITULO 2</h1>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <p class="menu__cajas__caja__parra">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,standard dummy text ever since the 1500s</p>
                 <span class="menu__cajas__caja__numero">22</span>
             </div>
             <div class="menu__cajas__caja">
                 <h1 class="menu__cajas__caja__t">TITULO 3</h1>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <p class="menu__cajas__caja__parra">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,standard dummy text ever since the 1500s</p>
                 <span class="menu__cajas__caja__numero">22</span>
             </div>
             <div class="menu__cajas__caja">
                 <h1 class="menu__cajas__caja__t" >TITULO 4</h1>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <p class="menu__cajas__caja__parra">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,standard dummy text ever since the 1500s</p>
                 <span class="menu__cajas__caja__numero">22</span>
             </div>
 
